# clipboard-mcp

./: .gitignore  Cargo.toml  README.md  server.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
