[package]
name = "clipboard-mcp"
version = "0.1.0"
edition = "2021"
description = "Cross-platform MCP server for system clipboard access"
license = "MIT"
repository = "https://github.com/mnardit/clipboard-mcp"
keywords = ["mcp", "clipboard", "ai", "claude"]
categories = ["command-line-utilities"]

[dependencies]
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
arboard = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
