[package]
name = "clipboard-mcp"
version = "0.2.0"
edition = "2024"
description = "Cross-platform MCP server for system clipboard access"
license = "MIT"
authors = ["Max Nardit"]
readme = "README.md"
repository = "https://github.com/mnardit/clipboard-mcp"
keywords = ["mcp", "clipboard", "ai", "claude", "mcp-server"]
categories = ["command-line-utilities"]
exclude = ["CLAUDE.md", "docs/", ".mcpregistry_*", ".github/"]

[dependencies]
rmcp = { version = "1", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt", "time", "sync", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio-util = "0.7"
